# gemini-cli-telegram

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml
docs/: architecture.md  commands.md  index.md  install.md  modes.md  roadmap.md  security.md  setup.md  troubleshooting.md
src/gemini_telegram_bridge/: __init__.py  app.py  bot.py  cli.py  config.py  db.py  gemini.py  helptext.py  media.py  sandbox.py  security.py
systemd/: gemini-telegram.service
tests/: test_cli.py  test_config.py  test_sandbox.py  test_security.py
