[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gemini-cli-telegram"
version = "0.1.0"
description = "Telegram bridge for Gemini CLI with sandboxed project sessions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0.0",
  "python-telegram-bot>=21.0",
]

[project.scripts]
gemini-telegram = "gemini_telegram_bridge.cli:main"
gemini-bridge = "gemini_telegram_bridge.bot:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
